--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -1,3 +1,20 @@
-.slide-in-out {
+/* .slide-in-out {
   transition: transform 0.8s ease;
 }
+
+
+
+.noticia-container {
+  display: flex;
+  flex-direction: column;
+  background-color: aqua;
+}
+
+.noticia-container > * {
+  flex-grow: 1;
+} */
+
+/* .prueba {
+  background-color: rgba(255, 255, 255, 59);
+  backdrop-filter: blur(90px);
+} */
