--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -18,3 +18,10 @@
   background-color: rgba(255, 255, 255, 59);
   backdrop-filter: blur(90px);
 } */
+
+.text-dispers-title {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 1;
+}
