--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -25,3 +25,21 @@
   overflow: hidden;
   -webkit-line-clamp: 1;
 }
+
+.container {
+  position: relative;
+  width: 100%;
+  /* height: 100%; */
+  height: 400px;
+  overflow: hidden;
+}
+
+.recortado {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 500px;
+  height: 400px;
+  background-color: #6b070a;
+  clip-path: polygon(0 0, 40% 0, 100% 100%, 0 100%);
+}
