--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -1,23 +1,6 @@
-/* .slide-in-out {
-  transition: transform 0.8s ease;
+.bg-shadow {
+  mask-image: linear-gradient(black 60%, transparent);
 }
-
-
-
-.noticia-container {
-  display: flex;
-  flex-direction: column;
-  background-color: aqua;
-}
-
-.noticia-container > * {
-  flex-grow: 1;
-} */
-
-/* .prueba {
-  background-color: rgba(255, 255, 255, 59);
-  backdrop-filter: blur(90px);
-} */
 
 .text-dispers-title {
   display: -webkit-box;
